examples/kju/positive/simple_call.kju
fun kju(): Unit
{
	var a: Int=f(x);
}
fun f(): Int 
{ 
    return 5;
}