examples/kju/negative/functions/wrong_return_type_from_function.kju
fun f():Int{
	return 5;
}

fun kju():Unit{
	var x:Bool=f();
}